# hrepr

./: .flake8  .gitignore  .travis.yml  LICENSE  LICENSE.txt  README.md  README.rst  examples.ipynb  publish  pyproject.toml  setup.py
.github/workflows/: python-package.yml
examples/: Basics.ipynb  exhibit.html  exhibit.py  pretty.py
hrepr/: __init__.py  core.py  embed.py  h.py  hgen.py  hjson.py  hlib.js  j.py  make.py  resource.py  std.py  term.py  textgen.py  textgen_simple.py  version.py
hrepr/style/: hrepr.css  nbreset.css
src/hrepr/: __init__.py  core.py  elements.py  hgen.py  j.py  textgen_simple.py
src/hrepr/style/: nbreset.css
style/: hrepr.css
tests/: common.py  test_custom.py  test_embed.py  test_h.py  test_hgen.py  test_hjson.py  test_hrepr.py  test_j.py  test_resource.py  test_std.py  test_textgen.py  test_version.py  x.css  x.js
tests/test_h/: test_constructor_cytoscape.html  test_constructor_multiple.html
tests/test_hgen/: stylish.css  test_constructor_cytoscape.html  test_constructor_global_symbol.html  test_constructor_katex.html  test_constructor_module.html  test_constructor_multiple.html  test_constructor_stylesheet.html  test_resource_embed_function.html  test_resource_embed_tag.html
tests/test_hrepr/: test_biglist_depth0_.html  test_biglist_standard_.html  test_bsentence_depth0_.html  test_bsentence_standard_.html  test_bytes_standard_.html  test_dataclass_depth0_.html  test_dataclass_standard_.html  test_deep_depth0_.html  test_deep_depth1_.html  test_deep_depth2_.html  test_deep_standard_.html  test_dict0_standard_.html  test_dict10_maxlen5_.html  test_dict_keys_depth0_.html  test_dict_keys_standard_.html  test_dict_standard_.html  test_dict_values_depth0_.html  test_dict_values_standard_.html  test_enum_standard_.html  test_exception_standard_.html  test_false_standard_.html  test_float_standard_.html  test_frozenset_depth0_.html  test_frozenset_standard_.html  test_int_standard_.html  test_list10_maxlen0_.html  test_list10_maxlen10_.html  test_list10_maxlen1_.html  test_list10_maxlen5_.html  test_list10_maxlen_1_.html  test_list_standard_.html  test_misc_standard_.html  test_multiref_shortrefs_.html  test_multiref_standard_.html  test_none_standard_.html  test_recursive2_shortrefs_.html  test_recursive2_standard_.html  test_recursive_shortrefs_.html  test_recursive_standard_.html  test_sentence_depth0_.html  (+15 more)
tests/test_j/: counter.esm.js  counter.js  test_alert.html  test_as_node.html  test_eval.html  test_exec.html  test_external_cytoscape.html  test_external_katex.html  test_global_symbol.html  test_j_as_page.html  test_j_from_hrepr.html  test_js_returns_node.html  test_kwargs.html  test_module.html  test_node_creation.html  test_object_reference.html  test_script.html  test_stylesheet.html  test_suppress_using_exec.html  test_thunk.html
tests/test_textgen/: test_max_col.txt
